--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+/*
+Global variables 
+*/
+:root {
+  --dark-spring-color: #25664a;
+  --mint: #44bb88;
+  --rifle-green: #4b4b2d;
+  --dark-tan: var(--csf-secondary-color);
+  --deer: var(--csf-third-color);
+  --spanish-grey: #9c9c8c;
+
+  --csf-primary-color: var(--mint);
+  --csf-primary-color-dark: var(--dark-spring-color);
+  --csf-secondary-color: #898952;
+  --csf-dark-secondary-color: var(--rifle-green);
+  --csf-light-secondary-color: var(--spanish-grey);
+
+  --csf-third-color: #b2935b;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +30,29 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+
+/*
+  Override Semantic UI
+*/
+.ui.primary.button,
+.ui.primary.buttons .button {
+  background-color: var(--csf-primary-color);
+}
+
+.ui.primary.button:hover,
+.ui.primary.buttons .button:hover {
+  background-color: var(--csf-primary-color-dark);
+}
+
+.ui.secondary.button,
+.ui.secondary.buttons .button {
+  background-color: var(--csf-secondary-color);
+}
+
+.ui.secondary.button:hover,
+.ui.secondary.buttons .button:hover {
+  background-color: var(--csf-dark-secondary-color);
 }
