--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -12,6 +12,7 @@
   margin-bottom: 0.5em;
   font-size: 2rem;
   color: white;
+  font-family: "Raleway", sans-serif;
 }
 
 .csf-header-title:hover {
@@ -22,4 +23,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Raleway", sans-serif;
 }
