--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -10,7 +10,10 @@
 }
 
 .csf-footer-links {
-  max-width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 700px;
   margin: 1em 0;
 }
 
