--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,11 @@ code {
 /*
   Override Semantic UI
 */
+/*.ui.button,
+.ui.pimary.buttons .button {
+  font-size: 1.25rem;
+}*/
+
 .ui.primary.button,
 .ui.primary.buttons .button {
   background-color: var(--csf-primary-color);
