--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -12,6 +12,10 @@
   text-align: center;
 }
 
+#csf-index-contact-button {
+  font-size: 1.5rem;
+}
+
 @media (max-width: 765px) {
   .csf-index {
     padding: 0 5%;
